--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                     <p>From kitchen remodels to property preparations for market, we handle every project with the same level of care and attention to detail. Your satisfaction is our top priority, and we're not finished until you're completely happy with the results.</p>
                 </div>
                 <div class="about-image">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 600'%3E%3Crect fill='%23f0f0f0' width='800' height='600'/%3E%3Cpath fill='%232C5F7C' d='M0 450 L400 300 L800 450 L800 600 L0 600 Z'/%3E%3Crect x='100' y='350' width='150' height='200' fill='%23FFF' stroke='%231a3d52' stroke-width='3'/%3E%3Crect x='550' y='350' width='150' height='200' fill='%23FFF' stroke='%231a3d52' stroke-width='3'/%3E%3Crect x='130' y='380' width='40' height='50' fill='%23F5B841'/%3E%3Crect x='180' y='380' width='40' height='50' fill='%23F5B841'/%3E%3Crect x='130' y='460' width='40' height='50' fill='%23F5B841'/%3E%3Crect x='180' y='460' width='40' height='50' fill='%23F5B841'/%3E%3Cpath d='M350 200 L450 280 L450 500 L250 500 L250 280 Z' fill='%23e0e0e0' stroke='%231a3d52' stroke-width='3'/%3E%3Cpath d='M230 280 L400 150 L570 280 L400 200 Z' fill='%23F5B841'/%3E%3Crect x='340' y='420' width='50' height='80' fill='%231a3d52'/%3E%3Ccircle cx='375' cy='460' r='5' fill='%23F5B841'/%3E%3C/svg%3E" alt="Home Renovation">
-                </div>
+                    <img src="img/hero.jpg" alt="About Sunshine Home Repairs">
             </div>
         </div>
     </section>
@@ -292,13 +291,13 @@
                         </div>
                         <div class="location-item">
                             <i class="fas fa-check-circle"></i>
-                            <span>Hialeah</span>
+                            <span>West Palm Beach</span>
                         </div>
                     </div>
                 </div>
                 <div class="map-container">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d914932.8948367456!2d-80.93418468906249!3d25.938539793359375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b0a20ec8c111%3A0xff96f271ddad4f65!2sMiami%2C%20FL!5e0!3m2!1sen!2sus!4v1699999999999!5m2!1sen!2sus" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d919872.3562444238!2d-80.43788395!3d26.320413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d902996bb4449d%3A0x770c51c3c78b9ea9!2sHollywood%2C%20FL!5e0!3m2!1sen!2sus!4v1699999999999!5m2!1sen!2sus&z=9" 
                         allowfullscreen="" 
                         loading="lazy" 
                         referrerpolicy="no-referrer-when-downgrade">
