--- a/index.html
+++ b/index.html
@@ -293,6 +293,14 @@
                             <i class="fas fa-check-circle"></i>
                             <span>West Palm Beach</span>
                         </div>
+                        <div class="location-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Boca Raton</span>
+                        </div>
+                        <div class="location-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Pompano Beach</span>
+                        </div>
                     </div>
                 </div>
                 <div class="map-container">
